[package]
name = "ravencol"
license = "MIT"
version = "0.1.1"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
description = "Tabular data manipulation"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
