[package]
name = "ravencol"
license = "MIT"
version = "0.1.4"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
description = "Tabular data manipulation"
repository = "https://github.com/irvingfisica/raven"
edition = "2018"

keywords = ["data-science", "dataframe", "data-manipulation", "csv"]
categories = ["algorithms", "mathematics", "science", "data science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
